# python

./: .env_template  .gitignore  Dockerfile  devices.csv  docker-compose.yaml  orders.csv  pyproject.toml  requirements.txt  shopapp.product-export(2)_Ifv15UU.csv
blogapp/: views.py
blogapp/migrations/: 0001_initial.py
myapiapp/: views.py
myauth/: forms.py  models.py  tests.py  urls.py  views.py
myauth/migrations/: 0001_initial.py
mysite/: .gitignore  db.sqlite3  log.txt  quieries.sql  requirements.txt  settings.py  shopapp-products-fixtures.json  shopapp-products-fixtures.xml  urls.py
mysite/HTML_CSS/: lesson_7.html
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/myapiapp/: serializers.py  urls.py
mysite/myauth/: forms.py  tests.py  views.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: middlewares.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  sitemap.py  tests.py  urls.py  views.py
requestdataapp/: forms.py  middlewares.py  urls.py  views.py
shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
shopapp/fixtures/: products-fixture.json  users-fixture.json
shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options.py  0008_product_created_by.py  0009_alter_product_description.py  0010_alter_product_description.py  0011_order_receipt.py  (+2 more)
(+88 files in other folders)
